# versor

./: .gitignore  README.md  pyproject.toml  readme-visual-design-guide.md  versor-design.md
.github/workflows/: ci.yml
docs/: calcs.py  design-v03.md  esolang-wiki-draft.md  reference.md  whitepaper.md
docs/playground/: asm.js  examples.js  index.html  main.js  versor.js
docs/playground/test/: golden.json  parity.test.mjs
examples/: add_two.vasm  add_two.vsr  countdown.vasm  countdown.vhl  countdown.vsr  countdown_b.vsr  fib.vhl  fib.vsr  helix.vsr  hello.vsr  interpolate.py  levy.vsr  make_examples.py  memory.vsr  shapewrite.py  straightline.vsr  synthesize.py  zoom.vsr
tests/: test_asm.py  test_clone.py  test_decode.py  test_exec.py  test_export.py  test_isa.py  test_loader.py  test_lsp.py  test_m6.py  test_minsky.py  test_programs.py  test_quat.py  test_repl.py  test_route.py  test_scale.py  test_shape.py  test_sphere26.py  test_spill.py  test_synth.py  test_v32.py  test_vhl.py  test_vhl3.py  test_viz.py
tooling/: README.md  vasm.tmLanguage.json
tooling/vscode-versor/: .vscodeignore  README.md  language-configuration-vasm.json  language-configuration-vhl.json  package-lock.json  package.json
tooling/vscode-versor/src/: extension.js
tooling/vscode-versor/syntaxes/: vasm.tmLanguage.json  vhl.tmLanguage.json
tools/: make_golden.py  optimize_sphere26.py  optimize_sphere32.py
versor/: __init__.py  asm.py  builder.py  cli.py  clone.py  decode.py  errors.py  examples.py  export.py  interp.py  isa.py  loader.py  lsp.py  machine.py  minsky.py  opdocs.py  quat.py  repl.py  route.py  synth.py  trace.py  vhl.py  viz.py
