[project]
name = "versor"
version = "0.1.0"
description = "A language where the program is the path: instructions are vectors, programs are polylines through 3D space."
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "matplotlib>=3.8"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
versor = "versor.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["versor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
